# leptos-csr

./: .gitignore  Cargo.toml
simple-challenges/: Cargo.toml  rustfmt.toml
simple-challenges/src/: derived_signals.rs  main.rs  simple_calculator.rs  simple_counter.rs  simple_counter_rw.rs  todo_list.rs
src/: main.rs
tailwind-components/: Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-analyzer.toml  tailwind.config.js  ui_config.toml
tailwind-components/src/: counter_demos.rs  main.rs  tailwind_counter.rs
tailwind-components/src/components/: counter_basic.rs  counter_props.rs  mod.rs
tailwind-components/src/components/demos/: demo_card.rs
tailwind-components/src/components/ui/: card.rs
tailwind-components/style/: input.css  output.css
