[package]
name = "leptos-csr"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "simple-challenges"
, "tailwind-components"]

[workspace.dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
