[package]
name = "simple-challenges"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true, features = ["csr"]}
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }