[package]
name = "tailwind-components"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true, features = ["csr"]}
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
web-sys = { workspace = true }
tw_merge = {workspace = true, features = ["variant"] }
icons = {workspace = true, features = ["leptos"]}
leptos_ui = {workspace = true }
leptos_router ={ workspace = true }

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
